--- a/hugo/index.html
+++ b/hugo/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://SYiYi11.github.io/images/favicon.png" />
-<title>Hugo | Hugo ʕ•ᴥ•ʔ Bear Blog</title>
+<title>Hugo | </title>
 <meta name="title" content="Hugo" />
 <meta name="description" content="Hugo
 Website: https://gohugo.io
@@ -24,13 +24,13 @@ Hugo is ideal for blogs, corporate websites, creative portfolios, online magazin
 
 
 <meta property="og:url" content="https://SYiYi11.github.io/hugo/">
-  <meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear Blog">
+  <meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear">
   <meta property="og:title" content="Hugo">
   <meta property="og:description" content="Hugo Website: https://gohugo.io
 Written in Go, Hugo is an open-source static site generator available under the Apache Licence 2.0. Hugo supports TOML, YAML, and JSON data file types, Markdown and HTML content files, and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification, and support for Sass SCSS workflows.
 Hugo makes use of a variety of open source projects including:
 https://github.com/yuin/goldmark https://github.com/alecthomas/chroma https://github.com/muesli/smartcrop https://github.com/spf13/cobra https://github.com/spf13/viper Hugo is ideal for blogs, corporate websites, creative portfolios, online magazines, single-page applications, or even a website with thousands of pages.">
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="https://SYiYi11.github.io/images/share.png">
 
@@ -216,13 +216,15 @@ https://github.com/yuin/goldmark https://github.com/alecthomas/chroma https://gi
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2></h2>
 </a>
 <nav><a href="/">Home</a>
 
 <a href="/bear/">Bear</a>
 
 <a href="/hugo/">Hugo</a>
+
+<a href="/test/">Test</a>
 
 
 <a href="/blog">Blog</a>
