--- a/bear/index.html
+++ b/bear/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://SYiYi11.github.io/images/favicon.png" />
-<title>Bear | Hugo ʕ•ᴥ•ʔ Bear Blog</title>
+<title>Bear | </title>
 <meta name="title" content="Bear" />
 <meta name="description" content="Bear
 Website: https://bearblog.dev
@@ -17,13 +17,13 @@ Bear makes it simple to publish content online and grow an audience while keepin
 
 
 <meta property="og:url" content="https://SYiYi11.github.io/bear/">
-  <meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear Blog">
+  <meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear">
   <meta property="og:title" content="Bear">
   <meta property="og:description" content="Bear Website: https://bearblog.dev
 There is a website obesity crisis. Bloated websites are full of scripts, ads, and trackers slowing your readers down every time they try to read your well-crafted content.
 Bear is all you need to build a fantastic and optimized site or blog. It works perfectly on any viewing device. All you need to focus on is writing good content.
 Bear makes it simple to publish content online and grow an audience while keeping pages tiny, fast, and optimized for search engines.">
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="og:image" content="https://SYiYi11.github.io/images/share.png">
 
@@ -209,13 +209,15 @@ Bear makes it simple to publish content online and grow an audience while keepin
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2></h2>
 </a>
 <nav><a href="/">Home</a>
 
 <a href="/bear/">Bear</a>
 
 <a href="/hugo/">Hugo</a>
+
+<a href="/test/">Test</a>
 
 
 <a href="/blog">Blog</a>
