--- a/text/index.html
+++ b/text/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="shortcut icon" href="https://SYiYi11.github.io/images/favicon.png" />
-<title>text | Hugo ʕ•ᴥ•ʔ Bear Blog</title>
+<title>text | </title>
 <meta name="title" content="text" />
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:url" content="https://SYiYi11.github.io/text/">
-  <meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear Blog">
+  <meta property="og:site_name" content="Hugo ʕ•ᴥ•ʔ Bear">
   <meta property="og:title" content="text">
   <meta property="og:description" content="Hugo &#43; Bear = :heart:">
-  <meta property="og:locale" content="en_US">
+  <meta property="og:locale" content="en">
   <meta property="og:type" content="article">
     <meta property="article:section" content="blog">
     <meta property="og:image" content="https://SYiYi11.github.io/images/share.png">
@@ -196,13 +196,15 @@
 
 <body>
   <header><a href="/" class="title">
-  <h2>Hugo ʕ•ᴥ•ʔ Bear Blog</h2>
+  <h2></h2>
 </a>
 <nav><a href="/">Home</a>
 
 <a href="/bear/">Bear</a>
 
 <a href="/hugo/">Hugo</a>
+
+<a href="/test/">Test</a>
 
 
 <a href="/blog">Blog</a>
